# slink-FastAPI

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  mypy_validate.py  pyproject.toml
.github/workflows/: ci.yaml
src/alembic/: env.py
src/alembic/versions/: 832d51656b81_добавление_добавлена_модель_link.py  b9e67f896267_добавление_добавлены_relationship_ы_и_.py  fd07e1f7c05b_добавление_добавлена_модель_user.py
src/slink/: config.py  exceptions.py  main.py
src/slink/auth/: __init__.py  auth.py  helpers.py  schemas.py  utils.py  validation.py
src/slink/certs/: jwt-private.pem  jwt-public.pem  server.crt  server.key
src/slink/database/: __init__.py  database.py  managers.py  models.py
src/slink/link/: __init__.py  link.py
src/slink/templates/: __init__.py  about_us.html  authenticated.html  base.html  index.html  login.html  register.html  router.py
tests/: test_main.py
